2012-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated to libpng 1.5.8 release

	* zlib: Updated to zlib 1.2.6 release

2012-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Update to Automake 1.11.3.  Add
	lzip compressed archive to options.

2012-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcraw.c (RegisterDCRAWImage): Add support for Mamiya
	Photo RAW "MEF" format.  Resolves SourceForge issue #3481508
	"*.MEF file open incorrect".

2012-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Convert RGB-compatible
	colorspaces (e.g. CineonLog) to RGB by default since that was the
	case prior to release 1.3.13.  User can still override it
	(avoiding removal of log encoding) by explicitly specifying the
	desired colorspace.  Problem was reported by Gary Margiotta.

2012-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): When reading, save input file
	endianness so that the endianness of the original file is
	preserved by default.  The user is able to override this default
	via -endian.  Problem was reported by JongAm Park.

2012-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Updated OpenMP results based on latest OpenMP
	tunings and the Intel Xeon E5649 CPU.

2012-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcraw.c (ReadDCRAWImage): Fix memory leak of ImageInfo.
	Resolves SourceForge bug #3475148 "memery leaks".

	* magick/module.c (ModuleAliases): EMF format is supported by EMF
	module and so mapping EMF to the WMF module caused EMF not to
	work.  Resolves SourceForge bug #3475147 "emf files can not be
	opened".  Note that the EMF module only works for Microsoft
	Windows.

2012-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Hull): Improve performance.

	* magick/effect.c (DespeckleImage): Improve performance.
