@@ -1,3 +1,7 @@
+2012-02-08  Glenn Randers-Pehrson  <glennrp@simplesystems.org>
+
+	* coders/txt.c: Added "-define txt:with-im-header" option.
+
 2012-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* png: Updated to libpng 1.5.8 release
